[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7.2" }
axum-macros = { version = "0.4.0" }
axum-prometheus = { version = "0.5.0" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
confy = "0.5.1"
reqwest = { version = "0.11", features = ["json"] }
